--- a/experiment/index.html
+++ b/experiment/index.html
@@ -2,19 +2,19 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>手習い目次 | nobi56.github.io</title>
-  <meta name="description" content="Index of my pastes(pastebin.com/u/nobi56)">
+  <title>手習い 目次 | nobi56.github.io</title>
+  <meta name="description" content="手習いカテゴリ 目次">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta name="format-detection" content="telephone=no,address=no,email=no">
-  <meta property="og:title" content="手習い目次 | nobi56.github.io">
-  <meta property="og:description" content="手習いカテゴリの目次">
+  <meta property="og:title" content="手習い 目次 | nobi56.github.io">
+  <meta property="og:description" content="手習いカテゴリ 目次">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://nobi56.github.io/experiment/index.html">
   <link rel="stylesheet" href="/assets/index.css">
 </head>
 <body>
 
-<header>手習い目次</header>
+<header>手習い 目次</header>
 
 <article>
 
@@ -33,7 +33,7 @@
   <p>
     <a href="/">top</a> &gt;
     手習い &gt;
-    手習い目次
+    手習い 目次
   </p>
   <p>&copy; 2018 nobi56.github.io</p>
 </footer>
