--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <section>
     <table>
     <tr><th><a href="/pastebin/index.html">Index of my pastes</a></th><td>随時</td></tr>
-    <tr><th><a href="/experiment/index.html">手習い目次</a></th><td>200605</td></tr>
-    <tr><th><a href="/the3rdSunOfOct/timoku.html">23種類の地目</a></th><td>181113</td></tr>
+    <tr><th><a href="/experiment/index.html">手習い</a></th><td>200605</td></tr>
+    <tr><th><a href="/the3rdSunOfOct/index.html">10月第3日曜日</a></th><td>181113</td></tr>
     </table>
   </section>
 
