--- a/pastebin/index.html
+++ b/pastebin/index.html
@@ -24,13 +24,14 @@
     <tr><th><a href="/pastebin/bash.html">bash/</a></th><td>5</td></tr>
     <tr><th><a href="/pastebin/dc.html">dc/</a></th><td>39</td></tr>
     <tr><th><a href="/pastebin/fsharp.html">F#/</a></th><td>19</td></tr>
-    <tr><th><a href="/pastebin/ja_jp.html">ja_JP/</a></th><td>3</td></tr>
+    <tr><th><a href="/pastebin/ja_jp.html">ja_JP/</a></th><td>1</td></tr>
     <tr><th><a href="/pastebin/kotlin.html">Kotlin/</a></th><td>16</td></tr>
-    <tr><th><a href="/pastebin/lua.html">Lua/</a></th><td>242</td></tr>
+    <tr><th><a href="/pastebin/lua.html">Lua/</a></th><td>223</td></tr>
     <tr><th><a href="/pastebin/m4.html">m4/</a></th><td>5</td></tr>
     <tr><th><a href="/pastebin/python.html">python/</a></th><td>23</td></tr>
     <tr><th><a href="/pastebin/tips.html">tips/</a></th><td>2</td></tr>
-    <tr><th><a href="https://pastebin.com/RRBjYruv">shebang</a></th><td>171228</td><td>191128</td></tr>
+    <tr><th><a href="https://pastebin.com/RRBjYruv">shebang</a></th><td>171228</td><td>200611</td></tr>
+    <tr><th><a href="https://pastebin.com/b2kAjD2f">workarounds for cross-compiling</a></th><td>200605</td><td>200611</td></tr>
     </table>
   </section>
 
