--- a/the3rdSunOfOct/timoku.html
+++ b/the3rdSunOfOct/timoku.html
@@ -123,8 +123,7 @@
 <footer>
   <p>
     <a href="/">top</a> &gt;
-    <!--<a href="/the3rdSunOfOct/">10月第3日曜日</a> &gt;-->
-    10月第3日曜日 &gt;
+    <a href="/the3rdSunOfOct/">10月第3日曜日</a>
     23種類の地目
   </p>
   <p>&copy; 2018 nobi56.github.io</p>
