--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -20,6 +20,7 @@
 
   <section>
     <table>
+    <tr><th><a href="https://pastebin.com/t0NZzVyQ">Change the file translation mode of stdout</a></th><td>210506</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/1gA76hLe">yc779</a></th><td>190820</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/7xAk64u7">yc851</a></th><td>190802</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/prqryXWc">wrapping in pcall</a></th><td>190720</td><td></td></tr>
